<resources>
    <string name="app_name">KINOTEKA</string>
    <string name="welcome_text">Добро пожаловать в MovieCatalog</string>
    <string name="enter_in_account_button">Войти в аккаунт</string>
    <string name="sing_up_button">Зарегистрироваться</string>
    <string name="enter_in_account">Вход в аккаунт</string>
    <string name="sign_in">Войти</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="email">Электронная почта</string>
    <string name="name">Имя</string>
    <string name="password_confirm">Подтвердите пароль</string>
    <string name="birthday">Дата рождения</string>
    <string name="to_sign_up">Зарегистрироваться</string>
    <string name="man">Мужчина</string>
    <string name="woman">Женщина</string>
    <string name="empty_field_error">Поле не должно быть пустым.</string>
    <string name="invalid_login_length">Логин должен содержать не менее 4 символов.</string>
    <string name="mismatch_error">Пароли не совпадают</string>
    <string name="invalid_email_error">Введите корректный адрес электронной почты</string>
    <string name="invalid_name_length">Имя должно содержать не менее 3 символов</string>
    <string name="invalid_password_length">Пароль должен содержать не менее 8 символов</string>
    <string name="invalid_birthday">Введите корректную дату рождения</string>
    <string name="unique_login_error">Такой логин уже существует</string>
    <string name="unexpected_error">Неизвестная ошибка</string>
    <string name="feed">Лента</string>
    <string name="films">Фильмы</string>
    <string name="favorites">Избранное</string>
    <string name="profile">Профиль</string>
    <string name="random_movie_button">Случайный фильм</string>
    <string name="liked_text">Мне нравится</string>
    <string name="all_text">Все</string>
    <string name="all_movies">Все фильмы</string>
    <string name="registration">Регистрация</string>
    <string name="sex">Пол</string>
    <string name="good_morning">Доброе утро,</string>
    <string name="good_day">Добрый день,</string>
    <string name="good_evening">Добрый вечер,</string>
    <string name="good_night">Доброй ночи,</string>
    <string name="accept">Применить</string>
    <string name="back">Назад</string>
    <string name="my_friends">Мои друзья</string>
    <string name="Favorites">Избранное</string>
    <string name="favorite_genres">Любимые жанры</string>
    <string name="favorites_movies">Любимые фильмы</string>
    <string name="its_empty_now">Здесь пока пусто</string>
    <string name="add_favorites_genres_and_movies">Добавьте любимые жанры и фильмы, чтобы вернуться к ним позже</string>
    <string name="find_movie">Найти фильм для себя</string>
    <string name="information">Информация</string>
    <string name="countries">Страны</string>
    <string name="age">Возраст</string>
    <string name="time">Время</string>
    <string name="year">Год выхода</string>
    <string name="director">Режиссёр</string>
    <string name="genres">Жанры</string>
    <string name="money">Финансы</string>
    <string name="budget">Бюджет</string>
    <string name="money_in_world">Сборы в мире</string>
    <string name="reviews">Отзывы</string>
    <string name="anonimus">Анонимный пользователь</string>
    <string name="edit_review">Изменить отзыв</string>
    <string name="add_review">Добавить отзыв</string>
    <string name="name_movie">Название</string>
    <string name="countre_year">Страна • Год</string>
</resources>