<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/app_background">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:background="@drawable/rounded_shape"
        android:layout_height="348dp"
        android:clipToOutline="true"
        android:outlineProvider="background"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="868dp"
            android:src="@drawable/welcome_screen_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="434dp"
            android:background="@drawable/fade_out_top" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="174dp"
            android:layout_gravity="bottom"
            android:background="@drawable/fade_out_bottom" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <Button
            android:id="@+id/back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/exit_button"
            android:visibility="visible">
        </Button>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/manrope_bold"
            android:text="@string/enter_in_account"
            android:textColor="@android:color/white"
            android:textSize="24sp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/frameLayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:background="@drawable/sign_up_button">
            <EditText
                android:id="@+id/login_edit_text"
                android:layout_width="300dp"
                android:layout_height="20dp"
                android:lineHeight="20dp"
                android:background="@drawable/sign_up_button"
                android:textAllCaps="false"
                android:hint="@string/login"
                android:inputType="textPersonName"
                android:textColorHint="@color/gray_faded"
                android:fontFamily="@font/manrope"
                android:textFontWeight="700"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_marginTop="12dp"
                android:layout_marginStart="16dp">
            </EditText>
            <Button
                android:id="@+id/login_cross"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/cross"
                android:visibility="visible">
            </Button>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:background="@drawable/sign_up_button">
            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="300dp"
                android:layout_height="20dp"
                android:lineHeight="20dp"
                android:textFontWeight="700"
                android:background="@drawable/sign_up_button"
                android:textAllCaps="false"
                android:hint="@string/email"
                android:textColorHint="@color/gray_faded"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/manrope"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_marginTop="12dp"
                android:layout_marginStart="16dp">
            </EditText>
            <Button
                android:id="@+id/mail_cross"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/cross"
                android:visibility="visible">
            </Button>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:background="@drawable/sign_up_button">
            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="300dp"
                android:layout_height="20dp"
                android:lineHeight="20dp"
                android:textFontWeight="700"
                android:background="@drawable/sign_up_button"
                android:textAllCaps="false"
                android:hint="@string/name"
                android:textColorHint="@color/gray_faded"
                android:fontFamily="@font/manrope"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:inputType="textPersonName"
                android:layout_marginTop="12dp"
                android:layout_marginStart="16dp">
            </EditText>
            <Button
                android:id="@+id/name_cross"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/cross"
                android:visibility="visible">
            </Button>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:background="@drawable/sign_up_button">
            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="300dp"
                android:layout_height="20dp"
                android:lineHeight="20dp"
                android:textFontWeight="700"
                android:background="@drawable/sign_up_button"
                android:textAllCaps="false"
                android:hint="@string/password"
                android:textColorHint="@color/gray_faded"
                android:inputType="textPassword"
                android:fontFamily="@font/manrope"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_marginTop="12dp"
                android:layout_marginStart="16dp">
            </EditText>
            <Button
                android:id="@+id/password_eye"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/eye"
                android:visibility="visible">
            </Button>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:background="@drawable/sign_up_button">
            <EditText
                android:id="@+id/confirm_password_text"
                android:layout_width="300dp"
                android:layout_height="20dp"
                android:lineHeight="20dp"
                android:textFontWeight="700"
                android:background="@drawable/sign_up_button"
                android:textAllCaps="false"
                android:hint="@string/password_confirm"
                android:textColorHint="@color/gray_faded"
                android:inputType="textPassword"
                android:fontFamily="@font/manrope"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_marginTop="12dp"
                android:layout_marginStart="16dp">
            </EditText>
            <Button
                android:id="@+id/confirm_password_eye"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/eye"
                android:visibility="visible">
            </Button>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:background="@drawable/sign_up_button">
            <EditText
                android:id="@+id/birthday_edit_text"
                android:layout_width="300dp"
                android:layout_height="20dp"
                android:lineHeight="20dp"
                android:textFontWeight="700"
                android:background="@drawable/sign_up_button"
                android:textAllCaps="false"
                android:hint="@string/birthday"
                android:textColorHint="@color/gray_faded"
                android:inputType="date"
                android:fontFamily="@font/manrope"
                android:textSize="14sp"
                android:enabled="false"
                android:textColor="@color/white"
                android:layout_marginTop="12dp"
                android:layout_marginStart="16dp">
            </EditText>
            <Button
                android:id="@+id/birthday_calendar"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/calendar"
                android:visibility="visible">
            </Button>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/left_double_button"
                android:textAllCaps="false"
                android:text="@string/man"
                android:textColor="@color/white">
            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/right_double_button"
                android:textAllCaps="false"
                android:text="@string/woman"
                android:textColor="@color/white">
            </Button>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/enterButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="48dp"
        android:textAllCaps="false"
        android:text="@string/to_sign_up"
        android:textColor="@color/white"
        android:background="@drawable/sign_in_button"
        android:gravity="center">
    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>